# langchain-cohere

./: .gitignore  CODEOWNERS  README.md
.github/scripts/: check_diff.py
libs/cohere/: .gitignore  Makefile  README.md  pyproject.toml
libs/cohere/docs/: cohere_agent.ipynb  multi_hop_agent.ipynb
libs/cohere/examples/: vision_example.py
libs/cohere/langchain_cohere/: __init__.py  chat_models.py  cohere_agent.py  common.py  embeddings.py  llms.py  rag_retrievers.py  rerank.py  utils.py
libs/cohere/langchain_cohere/chains/summarize/: prompt.py  summarize_chain.py
libs/cohere/langchain_cohere/csv_agent/: agent.py  prompts.py  tools.py
libs/cohere/langchain_cohere/react_multi_hop/: agent.py  parsing.py  prompt.py
libs/cohere/langchain_cohere/sql_agent/: agent.py  prompts.py
libs/cohere/tests/: clear_cassettes.py  conftest.py
libs/cohere/tests/integration_tests/: test_chat_models.py  test_embeddings.py  test_embeddings_standard.py  test_langgraph_agents.py  test_rag.py  test_reasoning_traces.py  test_rerank.py  test_standard.py  test_tool_calling_agent.py
libs/cohere/tests/integration_tests/cassettes/: test_astream.yaml  test_astream_with_vision.yaml  test_async_streaming_tool_call.yaml  test_batch.yaml  test_cohere_with_structured_output[Person-function_calling-expected2].yaml  test_cohere_with_structured_output[Person-json_mode-expected0].yaml  test_cohere_with_structured_output[Person-json_schema-expected1].yaml  test_cohere_with_structured_output[schema3-json_mode-expected3].yaml  test_cohere_with_structured_output[schema4-json_schema-expected4].yaml  test_command_a_reasoning_with_tool_call.yaml  test_connectors.yaml  test_documents.yaml  test_documents_chain.yaml  test_get_num_tokens_with_default_model.yaml  test_get_num_tokens_with_specified_model.yaml  test_invoke.yaml  test_invoke_multihop_agent.yaml  test_invoke_multiple_tools.yaml  test_invoke_tool_calls.yaml  test_invoke_with_multiple_images.yaml  test_invoke_with_text_only_list.yaml  test_invoke_with_vision_base64.yaml  test_invoke_with_vision_url.yaml  test_langchain_cohere_aembedding_documents.yaml  test_langchain_cohere_aembedding_documents_int8_embedding_type.yaml  test_langchain_cohere_aembedding_multiple_documents.yaml  test_langchain_cohere_aembedding_query.yaml  test_langchain_cohere_aembedding_query_int8_embedding_type.yaml  test_langchain_cohere_arerank_documents.yaml  test_langchain_cohere_arerank_with_rank_fields.yaml  test_langchain_cohere_embedding_documents.yaml  test_langchain_cohere_embedding_documents_int8_embedding_type.yaml  test_langchain_cohere_embedding_multiple_documents.yaml  test_langchain_cohere_embedding_query.yaml  test_langchain_cohere_embedding_query_int8_embedding_type.yaml  test_langchain_cohere_rerank_acompress_documents.yaml  test_langchain_cohere_rerank_compress_documents.yaml  test_langchain_cohere_rerank_documents.yaml  test_langchain_cohere_rerank_with_rank_fields.yaml  test_langchain_tool_calling_agent.yaml  (+10 more)
libs/cohere/tests/integration_tests/chains/summarize/: test_summarize_chain.py
libs/cohere/tests/integration_tests/chains/summarize/cassettes/: test_load_summarize_chain.yaml
libs/cohere/tests/integration_tests/chains/summarize/docs/: ginger_benefits.txt
libs/cohere/tests/integration_tests/csv_agent/: agent.py  test_csv_agent.py
libs/cohere/tests/integration_tests/csv_agent/cassettes/: test_multiple_csv.yaml  test_single_csv.yaml
libs/cohere/tests/integration_tests/csv_agent/csv/: movie_bookings.csv  movie_ratings.csv
libs/cohere/tests/integration_tests/react_multi_hop/: test_cohere_react_agent.py
libs/cohere/tests/integration_tests/react_multi_hop/cassettes/: test_invoke_multihop_agent.yaml
libs/cohere/tests/integration_tests/sql_agent/: agent.py  test_sql_agent.py
libs/cohere/tests/integration_tests/sql_agent/cassettes/: test_sql_agent.yaml
libs/cohere/tests/integration_tests/sql_agent/db/: employees.db
libs/cohere/tests/unit_tests/: test_chat_models.py  test_cohere_agent.py  test_embeddings.py  test_imports.py  test_llms.py  test_rag_retrievers.py  test_reasoning_traces.py  test_rerank.py  test_standard.py
libs/cohere/tests/unit_tests/react_multi_hop/agent/: test_add_citations.py
libs/cohere/tests/unit_tests/react_multi_hop/parsing/: test_output_parser.py  test_parse_citations.py
libs/cohere/tests/unit_tests/react_multi_hop/prompt/: test_multihop_prompt.py  test_render_tool.py
(+14 files in other folders)
