[tool.poetry]
name = "langchain-cohere"
version = "0.3.0.dev1"
description = "An integration package connecting Cohere and LangChain"
authors = []
readme = "README.md"
repository = "https://github.com/langchain-ai/langchain-cohere"
license = "MIT"

[tool.poetry.urls]
"Source Code" = "https://github.com/langchain-ai/langchain-cohere/tree/main/libs/cohere"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
langchain-core = { version = "^0.3.0.dev2", allow-prereleases = true }
cohere = ">=5.5.6,<6.0"
pandas = ">=1.4.3"
tabulate = "^0.9.0"
langchain-experimental = ">=0.0.6"
langchain-community = { version = ">=0.3.0.dev1",optional = true, allow-prereleases = true }
pydantic = ">=2,<3"

[[tool.mypy.overrides]]
module = [ "numpy", "pytest", "pandas",]
ignore_missing_imports = true


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
freezegun = "^1.2.2"
pytest-mock = "^3.10.0"
syrupy = "^4.0.2"
pytest-watcher = "^0.3.4"
pytest-asyncio = "^0.21.1"
langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core", branch = "v0.3rc" }
langchain-standard-tests = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/standard-tests", branch = "v0.3rc" }
langchain-community = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/community", branch = "v0.3rc" }
pytest-vcr = "^1.0.2"

[tool.poetry.group.codespell]
optional = true

[tool.poetry.group.codespell.dependencies]
codespell = "^2.2.0"

[tool.poetry.group.test_integration]
optional = true

[tool.poetry.group.test_integration.dependencies]
langchain = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/langchain", branch = "v0.3rc" }
langchain-text-splitters = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/text-splitters", branch = "v0.3rc" }
langgraph = { python = ">=3.9.0,<4.0", git = "https://github.com/langchain-ai/langgraph.git", subdirectory = "libs/langgraph", markers="python_version >= '3.9.0' and python_version < '4.0'" }
langchain-standard-tests = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/standard-tests", branch = "v0.3rc" }
pytest-vcr = "^1.0.2"
pytest = "^8.2.2"
[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.5"

[tool.poetry.group.typing.dependencies]
mypy = "^0.991"
langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core", branch = "v0.3rc" }


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
langchain-core = { git = "https://github.com/langchain-ai/langchain.git", subdirectory = "libs/core", branch = "v0.3rc" }
langgraph = { python = ">=3.9.0,<4.0", git = "https://github.com/langchain-ai/langgraph.git", subdirectory = "libs/langgraph", markers="python_version >= '3.9.0' and python_version < '4.0'" }

[tool.ruff]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

[tool.poetry.extras]
langchain_community = ["langchain-community"]

[tool.mypy]
disallow_untyped_defs = true

[tool.coverage.run]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# --strict-markers will raise errors on unknown marks.
# https://docs.pytest.org/en/7.1.x/how-to/mark.html#raising-errors-on-unknown-marks
#
# https://docs.pytest.org/en/7.1.x/reference/reference.html
# --strict-config       any warnings encountered while parsing the `pytest`
#                       section of the configuration file raise errors.
#
# https://github.com/tophat/syrupy
# --snapshot-warn-unused    Prints a warning on unused snapshots rather than fail the test suite.
addopts = "--snapshot-warn-unused --strict-markers --strict-config --durations=5"
# Registering custom markers.
# https://docs.pytest.org/en/7.1.x/example/markers.html#registering-markers
markers = [
  "requires: mark tests as requiring a specific library",
  "asyncio: mark tests as requiring asyncio",
  "compile: mark placeholder test used to compile integration tests without running them",
]
asyncio_mode = "auto"
